# mpy3

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
src/mpy3/: reader.py
src/mpy3/FileWalker/: __init__.py  walker.py
src/mpy3/ID3/: __init__.py  id3v1.py  id3v2.py
src/mpy3/ID3/ID3V1/: __init__.py  id3v1.py
src/mpy3/ID3/ID3V2/: id3v2.py
src/mpy3/ID3V1/: __init__.py  id3v1.py  v1genres.py
src/mpy3/IDV3/ID3V1/: __init__.py  id3v1.py
src/mpy3/Music/: album.py
src/mpy3/Reader/: bytes.py  reader.py
tests/: test_album.py  test_bytes.py  test_id3v2.py
